# SimpleTelegramBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/sample_bot/: main.py  settings.py
