[project]
name = "sample-bot"
version = "0.0.1"

description = "Application to run a Telegram bot"
keywords = ["internal", "telegram"]
readme = "README.md"
license = { "file" = "LICENSE.md" }

requires-python = ">=3.9"

authors = [
    { name = "A. Random Developer1", email = "author1@example.com" },
    { name = "A. Random Developer2", email = "author2@example.com" },
]

maintainers = [
    { name = "A. Great Maintainer1", email = "maintainer1@example.com" },
    { name = "A. Great Maintainer2", email = "maintainer2@example.com" },
]

classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Internal",
    "Topic :: Project Management :: Example",
    "License :: Proprietary :: Internal Use Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pyTelegramBotAPI",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pycodestyle",
    "flake8",
]

[project.scripts]
sample-bot = "sample_bot.main:main"

[tool.setuptools]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


# Additional configuration for development tools
[tool.pylint.messages_control]
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
]
